fix-overflow

--- a/styles/template.css
+++ b/styles/template.css
@@ -84,6 +84,8 @@ header{
     color: #171717e1;
 }
 
+
+
 .hamb-menu-banner{
     display:none;
 }
@@ -150,6 +152,7 @@ svg#docker-icon {
 }
 
 
+
 @media (max-width: 900px) {
     header {
         background-color: #e5e5e5;
@@ -200,6 +203,7 @@ svg#docker-icon {
         z-index: 100;
         padding: 20px 0px;
         background-image: linear-gradient(to bottom, #e5e5e5, #ebebeb, #f2f2f2, #f8f8f8, #ffffff);
+        overflow: hidden;
         transition: top .5s ease-in-out;
     }
     
@@ -273,7 +277,9 @@ svg#docker-icon {
     .sub-nav-container:nth-child(2) .sub-nav a {
         color: #17171777;
     }
-
+    .sub-nav a {
+        font-size: 0.9rem;
+    }
     .site-description {
         height:45vh;
         box-sizing: border-box;
